# turku-api

./: .bzrignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  MANIFEST.in  Makefile  README.md  README.md.license  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  registry.yml
api/: admin.py  models.py  urls.py  views.py
scripts/: turku_health
tests/: test_croniter_hash.py  test_stub.py  test_views.py
turku_api/: admin.py  croniter_hash.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
turku_api/management/commands/: turku_auth_create.py  turku_clean_logs.py  turku_health.py
turku_api/migrations/: 0001_initial.py  0002_add_field_source_published.py  0003_noop.py  0004_add_field_auth_name.py  0005_add_hashed_secrets_fields.py  0006_hash_secrets.py  0007_remove_unhashed_secrets_fields.py  0008_fix_auth_unique_together.py  0009_use_uuid_primary_key_field.py  0010_auto__add_backuplog.py  0011_auto__add_field_source_success.py  0012_auto__add_filterset__add_field_source_filter.py  0013_auto__add_field_backuplog_snapshot.py  0014_auto__add_field_storage_space_total__add_field_storage_space_available.py  0015_auto__add_field_source_snapshot_mode.py  0016_auto__chg_field_source_username__chg_field_source_password.py  0017_auto__add_field_source_bwlimit.py  0018_auto__del_field_source_username__del_field_source_password.py  0019_auto__add_field_auth_secret_hash__add_unique_auth_name__del_unique_aut.py  0020_hash_auth_secrets.py  0021_auto__del_field_auth_secret__chg_field_auth_secret_hash.py  0022_auto__add_field_machine_published.py  0023_auto__add_field_storage_published.py  0024_auto__add_field_source_preserve_hard_links.py
turku_api/templates/admin/: base_site.html  custom_change_form.html  custom_change_form.html.license
turku_api/tests/: test_views.py
