# SPDX-PackageName: turku-api
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/turku-api
# SPDX-FileCopyrightText: © 2015 Canonical Ltd.
# SPDX-FileCopyrightText: © 2015 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "turku-api"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "Turku backups - API application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "Django",
    "django[argon2]",
    "croniter",
    "tzdata",
]
dynamic = ["version"]

[project.optional-dependencies]
gunicorn = ["gunicorn"]

[tool.setuptools.packages.find]
include = [
    "turku_api",
    "turku_api.management.commands",
    "turku_api.tests",
]

[tool.black]
line-length = 132
