[metadata]
name = turku_api
author = Ryan Finnie
description = Turku backups - API application
url = https://github.com/rfinnie/turku-api
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = turku_api, turku_api.management.commands
install_requires = Django; tzdata
include_package_data = True
python_requires = ~=3.8
